--- a/OdeToFood/OdeToFood.Main/Pages/Restaurents/List.cshtml
+++ b/OdeToFood/OdeToFood.Main/Pages/Restaurents/List.cshtml
@@ -6,4 +6,16 @@
 
 <h1>List</h1>
 
-@Model.Message
+<p>@Model.Message</p>
+
+<table class="table">
+    @foreach (var restaurant in Model.Restaurents)
+    {
+        <tr>
+            <td>@restaurant.Id</td>
+            <td>@restaurant.Name</td>
+            <td>@restaurant.Location</td>
+            <td>@restaurant.Cuisine</td>
+        </tr>
+    }
+</table>
