--- a/OdeToFood/OdeToFood.Main/Pages/Restaurents/List.cshtml
+++ b/OdeToFood/OdeToFood.Main/Pages/Restaurents/List.cshtml
@@ -12,7 +12,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">Search</span>
             </div>
-            <input name="searchTerm" type="text" class="form-control" placeholder="restaurent name to search" />
+            <input asp-for="SearchTerm" type="text" class="form-control" placeholder="restaurent name to search" />
             <div class="input-group-append">
                 <button type="button" class="btn btn-outline-secondary">
                     <svg class="bi bi-search" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
