finish section 3, working with models and model binding

--- a/OdeToFood/OdeToFood.Main/Pages/Shared/_Layout.cshtml
+++ b/OdeToFood/OdeToFood.Main/Pages/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Restaurents/List">Restaurants-List</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Restaurants/List">Restaurants-List</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
